# Programming_Reports

.obsidian/: workspace.json
Reports/: template.md
Reports/LR-1/: LR-1.md  lab_1-Frolov_Andrew_1_IVT-2.md
Reports/LR-2/: lab_2-Frolov_Andrew_1_IVT-2.md
Reports/LR-3/: lab_3-Frolov_Andrew_1_IVT-2.md
Reports/LR-4/: lab_4-Frolov_Andrew_1_IVT-2.md
Reports/LR5/: Makefile  meson.build
Reports/LR5/include/: cli_handler.h  file_manager.h  task.h  task_list.h
Reports/LR5/src/: main.c
Reports/SR-1/: sr_1-Frolov_Andrew_1_IVT-2.md
Reports_C/LR-1/: lab_1-Frolov_Andrew_1_IVT-2.md
Reports_C/LR-2/: lab_2-Frolov_Andrew_1_IVT-2.md
Reports_C/LR-3/: lab_3-Frolov_Andrew_1_IVT-2.md
Reports_C/LR-4/: lab_4-Frolov_Andrew_1_IVT-2.md
Reports_C/LR5/: CMakeLists.txt  README.md
Reports_C/LR5/data/: Penis.csv
Reports_C/LR5/src/: cli_handler.c  file_manager.c  task.c  task_list.c
Reports_C/SR-1/: sr_1-Frolov_Andrew_1_IVT-2.md
Reports_Rust/: template.md
Reports_Rust/LR1/: lab_1-Frolov_Andrew_1_IVT-2.md
